--- a/API/vercel.json
+++ b/API/vercel.json
@@ -1,8 +1,10 @@
 {
     "version": "2",
     "builds": [ {"src": "ApiServer.js", "use": "@vercel/node"} ],
-    "routes": {
+    "routes": [ 
+        {
         "src": "/(.*)",
         "dest": "ApiServer.js"
-    }
+        } 
+    ]
 }
