--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,8 +1,10 @@
 {
     "version": "2",
     "builds": [ {"src": "backendServer.js", "use": "@vercel/node"} ],
-    "routes": {
+    "routes": [ 
+        {
         "src": "/(.*)",
         "dest": "backendServer.js"
-    }
+        } 
+    ]
 }
