--- a/API/vercel.json
+++ b/API/vercel.json
@@ -1,5 +1,5 @@
 {
-    "version": "2",
+    "version": 2,
     "builds": [ {"src": "ApiServer.js", "use": "@vercel/node"} ],
     "routes": [ 
         {
