--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,5 +1,5 @@
 {
-    "version": "2",
+    "version": 2,
     "builds": [ {"src": "backendServer.js", "use": "@vercel/node"} ],
     "routes": [ 
         {
